// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-recycle-bin-media-original-parent should handle invalid media id 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "operationStatus": "NotFound",
    "status": 404,
    "title": "The media item could not be found",
    "type": "Error",
  },
}
`;

exports[`get-recycle-bin-media-original-parent should return null for media that was at root level 1`] = `
{
  "content": [
    {
      "text": "null",
      "type": "text",
    },
  ],
}
`;

exports[`get-recycle-bin-media-original-parent should return original parent information for recycled media 1`] = `
{
  "content": [
    {
      "text": "{"id":"d8e49f21-354c-456d-8699-e46cad495a1f"}",
      "type": "text",
    },
  ],
}
`;
